feat(service_order): list service order endpoint
